--- a/public/example4.html
+++ b/public/example4.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Pull</title>
+    <meta charset="utf-8">
     <script src="/socket.io/socket.io.js"></script>
     <script src="javascripts/jquery-1.7.1.min.js"></script>
     <script>
