--- a/public/example1.html
+++ b/public/example1.html
@@ -7,7 +7,7 @@
     <script src="javascripts/jquery-1.7.1.min.js"></script>
     <link href="stylesheets/style.css">
     <script>
-        var socket = io.connect('http://localhost:3000');
+        var socket = io.connect('');
         //连接成功
         socket.on('connect', function () {
             console.log('connect');
