--- a/public/example2.html
+++ b/public/example2.html
@@ -6,7 +6,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="javascripts/jquery-1.7.1.min.js"></script>
     <script>
-        var socket = io.connect('http://localhost');
+        var socket = io.connect('');
         //连接成功
         socket.on('connect', function () {
             console.log('connect');
