--- a/public/example4.html
+++ b/public/example4.html
@@ -6,21 +6,20 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="javascripts/jquery-1.7.1.min.js"></script>
     <script>
-        var socket = io.connect('http://192.168.1.87:3000');
+        var socket = io.connect('');
         //连接成功
         socket.on('connect', function () {
 //            console.log('connect');
-
         })
         //失去连接
         socket.on('disconnect', function () {
 //            console.log('disconnect');
         });
-        socket.on('agree',function(data){
-                $("#"+data.elementname).css({
-                    backgroundColor:"#FFFFFF"
-                });
-                $("#"+data.elementname).removeAttr("disabled");
+        socket.on('agree', function (data) {
+            $("#" + data.elementname).css({
+                backgroundColor:"#FFFFFF"
+            });
+            $("#" + data.elementname).removeAttr("disabled");
         });
 
     </script>
@@ -37,23 +36,23 @@
 <script>
     $(document).ready(function () {
 
-        $("input").focus(function(e){
+        $("input").focus(function (e) {
 
-            socket.emit('formselect',{elementname:$(e.target).attr('id')});
-            socket.on('forbidden',function(data){
-                console.log("ddd"+$(e.target).attr('id'));
+            socket.emit('formselect', {elementname:$(e.target).attr('id')});
+            socket.on('forbidden', function (data) {
+                console.log("ddd" + $(e.target).attr('id'));
                 console.log(data.elementname);
-                if(data.elementname==$(e.target).attr('id')){
-                    $("#"+data.elementname).css({
+                if (data.elementname == $(e.target).attr('id')) {
+                    $("#" + data.elementname).css({
                         backgroundColor:"#FF0000"
                     });
-                    $("#"+data.elementname).attr("disabled","disabled");
+                    $("#" + data.elementname).attr("disabled", "disabled");
                     return false;
                 }
             });
         });
-        $("input").blur(function(e){
-            socket.emit('formnotselect',{elementname:$(e.target).attr('id')});
+        $("input").blur(function (e) {
+            socket.emit('formnotselect', {elementname:$(e.target).attr('id')});
         });
     });
 </script>
